--- a/.gitignore
+++ b/.gitignore
@@ -188,3 +188,4 @@ $RECYCLE.BIN/
 # Custom rules (everything added below won't be overriden by 'Generate .gitignore File' if you use 'Update' option)
 engineer-notes.md
 .vscode/*
+credentials/*
